# install_deps

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
src/: install_deps.py
tests/: test_simple.py
